--- a/RaspberryPi Server/index.html
+++ b/RaspberryPi Server/index.html
@@ -9,8 +9,18 @@
 
 <body>
 
+<div class = "title">
+  <p><h1>Raw Data</h1> </p>
+  </div>
+  <div class = "title">
+    <p><h1>24h Summary</h1></p>
+    </div>
   <div id="line_graph", class = "graphs">
   <script type="text/javascript" src="/js/Weather_graph.js"></script>
+  </div>
+
+  <div id="summary_graph", class = "graphs">
+  <script type="text/javascript" src="/js/sum_graph.js"></script>
   </div>
 
 <div class = "text">
