--- a/RaspberryPi Server/index.html
+++ b/RaspberryPi Server/index.html
@@ -23,6 +23,10 @@
   <script type="text/javascript" src="/js/sum_graph.js"></script>
   </div>
 
+  <div id="monthly_graph", class = "graphs">
+  <script type="text/javascript" src="/js/Monthly_sum.js"></script>
+  </div>
+
 <div class = "text">
 <p> </p>
   </div>
